LIN-4884/LIN-4892 Set vaadin version to 25.1
Change-Id: Ib40535496f6ba16d065bf9f07688d3db737d4430